# ghc-musl

./: .gitignore  CHANGELOG.md  Dockerfile  Earthfile  README.md  build.sh  ci.nix  config.json  default.nix  image.nix  push.sh  readme.nix  shell.nix  test-all.sh  update-readme.sh  upload.sh
.github/workflows/: build.yaml
example/: Main.hs  cabal.project  example.cabal  stack.yaml
nix/: sources.json
patches/: 0001-Revert-ghc-8.6.3-binary-8.6.5-binary.patch
test/: test-cabal.sh  test.sh
