name: example
version: 0.0.1
license: BSD3
cabal-version: >= 1.6
build-type: Simple

executable example
  main-is: Main.hs
  build-depends: base
               , digest
               , bytestring
               , ghc-musl-test-dep
               , bzlib-conduit
               , http-client-openssl
               , pcre-light

